+ Fixed CSS design for Choicebox + Fixed alignments of stage settings

--- a/src/dk/aau/cs/ds306e18/tournament/ui/layout/css/style.css
+++ b/src/dk/aau/cs/ds306e18/tournament/ui/layout/css/style.css
@@ -1,4 +1,4 @@
-.button, #TS-leftside .choice-box {
+.button, .choice-box {
     -fx-background-color: #f8f8f8;
     -fx-background-radius: 0;
     -fx-border-color: #c2c2c2;
